--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -28,9 +28,47 @@ env:
   ALGoRepoSettings: ${{ vars.ALGoRepoSettings }}
 
 jobs:
+  GetBranches:
+    runs-on: ubuntu-latest
+    outputs:
+      SupportedBranches: ${{ steps.GetSupportedBranches.outputs.GitBranches }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Read settings
+        uses: microsoft/AL-Go-Actions/ReadSettings@main
+        with:
+          shell: powershell
+          get: UpdateALGoBranches
+
+      - name: Default to main
+        shell: powershell
+        if: ${{ env.UpdateALGoBranches == '' }}
+        run: |
+          $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
+
+          Write-Host "No branches specified to update AL-Go on a schedule. Defaulting to main"
+          Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "UpdateALGoBranches=main"
+
+      - name: Get Supported Branches
+        id: GetSupportedBranches
+        uses: microsoft/AL-Go-Actions/GetGitBranches@main
+        with:
+          shell: powershell
+          includeBranches: $env:UpdateALGoBranches
+
+
+
   UpdateALGoSystemFiles:
-    needs: [ ]
+    needs: [ GetBranches ]
     runs-on: [ windows-latest ]
+    name: "[${{ matrix.branch }}] Update AL-Go"
+    strategy:
+      matrix:
+        branch: ${{ fromJson(needs.GetBranches.outputs.SupportedBranches) }}
+      fail-fast: false
+
     steps:
       - name: Dump Workflow Information
         uses: microsoft/AL-Go-Actions/DumpWorkflowInfo@main
@@ -39,6 +77,8 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ matrix.branch }}
 
       - name: Initialize the workflow
         id: init
