--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -48,7 +48,7 @@ jobs:
         run: |
           $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
 
-          $UpdateALGoBranches = "main"
+          $UpdateALGoBranches = @("main")
           Write-Host "No branches specified to update AL-Go on a schedule. Defaulting to main"
           Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "UpdateALGoBranches=$(ConvertTo-Json $UpdateALGoBranches -Compress)"
 
