--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -57,7 +57,7 @@ jobs:
         uses: microsoft/AL-Go-Actions/GetGitBranches@main
         with:
           shell: powershell
-          includeBranches: ${{ $env:UpdateALGoBranches }}
+          includeBranches: ${{ env:UpdateALGoBranches }}
 
   UpdateALGoSystemFiles:
     needs: [ GetBranches ]
