Add name property to GetBranches

--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -30,6 +30,7 @@ env:
 jobs:
   GetBranches:
     runs-on: windows-latest
+    name: Get Supported Branches
     outputs:
       SupportedBranches: ${{ steps.GetSupportedBranches.outputs.GitBranches }}
     steps:
