Fix issue with types

--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -48,7 +48,7 @@ jobs:
         uses: microsoft/AL-Go-Actions/GetGitBranches@main
         with:
           shell: powershell
-          includeBranches: ${{ env.updateALGoBranches }}
+          includeBranchesJson: ${{ env.updateALGoBranches }}
 
   UpdateALGoSystemFiles:
     needs: [ GetBranches ]
