--- a/Actions/GetGitBranches/action.yaml
+++ b/Actions/GetGitBranches/action.yaml
@@ -21,11 +21,11 @@ runs:
       shell: ${{ inputs.shell }}
       id: GetGitBranches
       env:
-        _includeBranches: ${{ inputs.includeBranches }}
+        _includeBranchesJson: ${{ inputs.includeBranchesJson }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/GetGitBranches.ps1 -includeBranches $env:_includeBranches
+          ${{ github.action_path }}/GetGitBranches.ps1 -includeBranchesJson $env:_includeBranches
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
