--- a/Actions/ReadPowerPlatformSettings/action.yaml
+++ b/Actions/ReadPowerPlatformSettings/action.yaml
@@ -40,12 +40,20 @@ runs:
   using: composite
   steps:
     - name: run
-      id: ReadPowerPlatformSettings
       shell: ${{ inputs.shell }}
+      id: ReadPowerPlatformSettings
       env:
         _deploymentEnvironmentsJson: ${{ inputs.deploymentEnvironmentsJson }}
         _environmentName: ${{ inputs.environmentName }}
-      run: ${{ github.action_path }}/ReadDeploymentAndAuthSettings.ps1 -deploymentEnvironmentsJson $ENV:_deploymentEnvironmentsJson -environmentName $ENV:_environmentName
+      run: |
+        $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
+        try {
+          ${{ github.action_path }}/ReadPowerPlatformSettings.ps1 -deploymentEnvironmentsJson $ENV:_deploymentEnvironmentsJson -environmentName $ENV:_environmentName
+        }
+        catch {
+          Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
+          exit 1
+        }
 branding:
   icon: terminal
   color: blue
