--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: Determine branches to update
         id: DetermineBranches
         run: |
-            if (${{ github.event_name }} -eq 'workflow_dispatch') {
+            if ('${{ github.event_name }}' -eq 'workflow_dispatch') {
               Write-Host "Running Update AL-Go System Files on a manual trigger."
               Add-Content -Encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "Result=['${{ github.ref_name }}']"
             }
