--- a/Actions/PipelineCleanup/action.yaml
+++ b/Actions/PipelineCleanup/action.yaml
@@ -9,10 +9,6 @@ inputs:
     description: Project folder
     required: false
     default: '.'
-  parentTelemetryScopeJson:
-    description: Specifies the parent telemetry scope for the telemetry signal
-    required: false
-    default: '7b7d'
 runs:
   using: composite
   steps:
@@ -20,11 +16,10 @@ runs:
       shell: ${{ inputs.shell }}
       env:
         _project: ${{ inputs.project }}
-        _parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/PipelineCleanup.ps1 -project $ENV:_project -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson
+          ${{ github.action_path }}/PipelineCleanup.ps1 -project $ENV:_project
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
