--- a/Actions/WorkflowInitialize/action.yaml
+++ b/Actions/WorkflowInitialize/action.yaml
@@ -5,13 +5,7 @@ inputs:
     description: Shell in which you want to run the action (powershell or pwsh)
     required: false
     default: powershell
-  eventId:
-    description: The event id of the initiating workflow
-    required: true
 outputs:
-  correlationId:
-    description: A correlation Id for the workflow
-    value: ${{ steps.workflowinitialize.outputs.correlationId }}
   telemetryScopeJson:
     description: A telemetryScope that covers the workflow
     value: ${{ steps.workflowinitialize.outputs.telemetryScopeJson }}
@@ -21,12 +15,10 @@ runs:
     - name: run
       shell: ${{ inputs.shell }}
       id: workflowinitialize
-      env:
-        _eventId: ${{ inputs.eventId }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/WorkflowInitialize.ps1 -eventId $ENV:_eventId
+          ${{ github.action_path }}/WorkflowInitialize.ps1
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
