check that no jobs are skipped (all tests are run)

--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -97,7 +97,7 @@ jobs:
           $errorActionPreference = "Stop"
           $end2endRuns = (gh api /repos/$($env:GITHUB_REPOSITORY)/actions/runs?per_page=100 | ConvertFrom-Json).workflow_runs | Where-Object { $_.name -eq 'End to end tests' }
           $latestSha = (gh api /repos/$($env:GITHUB_REPOSITORY)/commits/main | ConvertFrom-Json).sha
-          $latestRun = $end2endruns | Where-Object { $_.head_sha -eq $latestSha }
+          $latestRun = $end2endruns | Where-Object { $_.head_sha -eq $latestSha } | select-object -first 1
           if (!$latestRun) {
             throw "No End to end tests run found for the latest commit on main"
           }
@@ -106,6 +106,12 @@ jobs:
           }
           if ($latestRun.conclusion -ne 'success') {
             throw "End to end tests run for the latest commit on main did not succeed"
+          }
+          $allJobs = (gh api /repos/$($env:GITHUB_REPOSITORY)/actions/runs/$($latestRun.id)/jobs | ConvertFrom-Json).jobs
+          foreach($job in $allJobs) {
+            if ($job.conclusion -ne 'success') {
+              throw "Some jobs in the end to end tests run for the latest commit was skipped, failed or cancelled"
+            }
           }
 
   Deploy:
